[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/images/hosting/hosting5.png" type="Texture" id=1]
[ext_resource path="res://assets/images/hosting/hosting3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/hosting/hosting1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/hosting/hosting2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/hosting/hosting4.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/GiveYouGlory-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/back_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/images/back_normal.png" type="Texture" id=8]
[ext_resource path="res://scripts/waiting_room.gd" type="Script" id=9]
[ext_resource path="res://assets/images/button_normal.png" type="Texture" id=10]
[ext_resource path="res://assets/images/button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/images/searching/search2.png" type="Texture" id=12]
[ext_resource path="res://assets/images/searching/search1.png" type="Texture" id=13]
[ext_resource path="res://assets/images/searching/search3.png" type="Texture" id=14]
[ext_resource path="res://assets/images/searching/search0.png" type="Texture" id=15]
[ext_resource path="res://assets/images/searching/search4.png" type="Texture" id=16]
[ext_resource path="res://assets/images/searching/search5.png" type="Texture" id=17]
[ext_resource path="res://assets/images/done/done4.png" type="Texture" id=18]
[ext_resource path="res://assets/images/done/done5.png" type="Texture" id=19]
[ext_resource path="res://assets/images/done/done6.png" type="Texture" id=20]
[ext_resource path="res://assets/images/done/done7.png" type="Texture" id=21]
[ext_resource path="res://assets/images/done/done8.png" type="Texture" id=22]
[ext_resource path="res://assets/images/done/done2.png" type="Texture" id=23]
[ext_resource path="res://assets/images/done/done3.png" type="Texture" id=24]
[ext_resource path="res://assets/images/done/done1.png" type="Texture" id=25]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "hosting",
"speed": 2.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "done",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "done",
"speed": 20.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "searching",
"speed": 3.0
} ]

[node name="waiting_room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hosting_container" type="ViewportContainer" parent="host"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -50.0
margin_right = 37.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hosting" type="AnimatedSprite" parent="host/hosting_container"]
position = Vector2( 1.28528, 6.12241 )
frames = SubResource( 1 )
animation = "hosting"

[node name="stat" type="Label" parent="host"]
anchor_right = 1.0
margin_top = 51.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
text = "Waiting for the player to join ..."
align = 1

[node name="play" type="TextureButton" parent="host"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -168.0
margin_right = 108.0
margin_bottom = -71.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_text" type="Label" parent="host/play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -28.5
margin_right = 70.5
margin_bottom = 44.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
text = "PLAY !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="client" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="search_container" type="ViewportContainer" parent="client"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -47.0
margin_right = 20.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="searching" type="AnimatedSprite" parent="client/search_container"]
position = Vector2( 12.447, 64.386 )
scale = Vector2( 0.659271, 0.659271 )
frames = SubResource( 3 )
animation = "done"

[node name="stat" type="Label" parent="client"]
anchor_right = 1.0
margin_top = 52.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
text = "Searching ..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -108.0
margin_right = 109.0
margin_bottom = -8.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = -694.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_timer" type="Timer" parent="."]
wait_time = 0.001

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 26 )

[connection signal="button_up" from="host/play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
[connection signal="timeout" from="close_timer" to="." method="_on_close_timer_timeout"]
